--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,10 +1,12 @@
+<p>
 <%= form_for([@product]) do |f| %>
-<%= f.text_field :name, :placeholder => "What is it?" %>
-<%= f.text_field :description, :placeholder => "Describe it" %>
-<%= f.text_field :location, :placeholder => "Where are you?" %>
-<%= f.text_field :price, :placeholder => "How much is it?" %>
-<%= f.text_field :storage, :placeholder => "How have you stored it?" %>
-<%= f.text_field :pickup, :placeholder => "When to pick it up?" %>
+<%= f.text_field :name, :placeholder => "What is it?", :class => "welcome-form" %>
+<%= f.text_field :description, :placeholder => "Describe it", :class => "welcome-form" %>
+<%= f.text_field :location, :placeholder => "Where are you?", :class => "welcome-form" %>
+<%= f.text_field :price, :placeholder => "How much is it?", :class => "welcome-form" %>
+<%= f.text_field :storage, :placeholder => "How have you stored it?", :class => "welcome-form" %>
+<%= f.text_field :pickup, :placeholder => "When to pick it up?", :class => "welcome-form" %>
 
 <%= f.submit "Submit", {:class => "btn btn-primary"} %>
 <% end %>
+</p>
