--- a/app/views/welcome/_navbar.html.erb
+++ b/app/views/welcome/_navbar.html.erb
@@ -7,13 +7,13 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#">Pare-Up</a>
+    <a class="navbar-brand" href="/">Pare-Up</a>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse navbar-ex1-collapse">
       <%= form_tag({:controller => "products", :action => "index"}, method: :get, :class => "navbar-form navbar-left", :role => "search") do %>
-        <%= text_field_tag :search, params[:search], :class => "input-medium search-query" %>
+        <%= text_field_tag :search, params[:search], :class => "input-medium search-query", placeholder: "Search by food" %>
         <%= submit_tag "Go!", :name => nil, :class => "btn btn-default" %>
       <% end %>
     <ul class="nav navbar-nav navbar-right">
