--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,14 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<%= render '/welcome/navbar' %>
+<%= render '/layouts/navbar' %>
+<% if notice %>
+<p class="notice"><%= notice %></p>
+<% end %>
+<% if alert %>
+<p class="alert"><%= alert %></p>
+<% end %>
+
 <%= yield %>
 
 </body>
