--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -16,7 +16,7 @@
    <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Browse <b class="caret"></b></a>
         <ul class="dropdown-menu">
-          <li><a href="#">Browse by Food</a></li>
+          <li><a href="/products">Browse by Food</a></li>
           <li><a href="#">Browse by Location</a></li>
         </ul>
       </li>
