--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -32,3 +32,12 @@ text-shadow: 1px 1px #000000;
   background-color:rgba(250,250,250,0.5);
   line-height: 2;
 }
+
+.product-show-main {
+  background: rgba(250,250,250,0.7);
+}
+
+.navbar-default {
+  /*background-color:rgba(0,0,0,0.3);*/
+  /*color: white;*/
+}
