--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -4,8 +4,7 @@
 <%= f.text_field :description, :placeholder => "Describe it", :class => "welcome-form" %>
 <%= f.text_field :location, :placeholder => "Where are you?", :class => "welcome-form" %>
 <%= f.text_field :price, :placeholder => "How much is it?", :class => "welcome-form" %>
-<%= f.text_field :image_url, :placeholder => "Image?", :class => "welcome-form" %>
-
+<%= f.file_field :image, :class => "welcome-form" %>
 
 <%= f.submit "Submit", {:class => "btn btn-primary"} %>
 <% end %>
