Added search bar to buying button on welcome page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -8,7 +8,7 @@
     <br>
       <div class="welcome-links-container">
     <p>
-      <%= link_to "Buying? &raquo;".html_safe, root_path, {:class => "btn btn-lg btn-primary", :id => "new-product-link", remote: true} %>
+      <%= link_to "Buying? &raquo;".html_safe, search_path, {:class => "btn btn-lg btn-primary", :id => "new-product-link", remote: true} %>
 
       <%= link_to "Selling? &raquo;".html_safe, new_product_path, {:class => "btn btn-lg btn-primary", :id => "new-product-link", remote: true} %>
     </p>
