--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -29,7 +29,7 @@
         <% if user_signed_in? %>
         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.email %> <b class="caret"></b></a>
         <ul class="dropdown-menu">
-          <li><a href="/users/edit">Edit Account</a></li>
+          <li><a href="/users/edit">Account Preferences</a></li>
           <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
         </ul>
         <% else %>
