--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,17 +1,15 @@
 <div class="col-md-1"></div>
 
-
-
 <div class="well product-show-main col-md-6">
-<h1><%= @product.name %></h1>
-<h3><%= @product.location %>&nbsp $<%= @product.price %></h3>
-<p><%= @product.description %></p>
+  <h1><%= @product.name %></h1>
+  <h3><%= @product.location %>&nbsp $<%= @product.price %></h3>
+  <p><%= @product.description %></p>
 </div>
 <div class="col-md-1"></div>
-<div class="well product-show-main col-md-3">
+<div class="col-md-3">
   <p><%= image_tag @product.image.url(:medium) %></p>
 </div>
-
+<!-- <div class="well product-show-main col-md-3"> -->
 
 
 <div class="col-md-1"></div>
