--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,5 +1,5 @@
 body {
-  background: url(cover.jpg) no-repeat center center fixed;
+  background: url(http://s3.amazonaws.com/FoodApp/cover.jpg) no-repeat center center fixed;
   background-size: cover;
 }
 
