--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -16,8 +16,8 @@
    <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Browse <b class="caret"></b></a>
         <ul class="dropdown-menu">
-          <li><a href="/products">Browse by Food</a></li>
-          <li><a href="#">Browse by Location</a></li>
+          <li><%= link_to "Browse by Food", products_path, 'data-no-turbolink' => true %></li>
+          <li><%= link_to "Browse by Location", location_path, 'data-no-turbolink' => true %></li>
         </ul>
       </li>
 </ul>
