--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,6 @@
-<% @products.each do |product| %>
 <div class="col-md-1"></div>
 <div class="col-md-5">
+<% @products.each do |product| %>
   <div class="well">
 
     <div class="pull-left">
@@ -14,6 +14,8 @@
     <p><%= product.description %></p>
 
   </div>
-</div>
-<!-- <div class="col-md-6"></div> -->
+
 <% end %>
+</div>
+<div class="col-md-2"></div>
+<div class="col-md-4"><%= gmaps4rails(@json) %></div>
