--- a/app/assets/stylesheets/gmaps4rails.css
+++ b/app/assets/stylesheets/gmaps4rails.css
@@ -14,13 +14,13 @@
   height: 400px;
 }
 
-.bing_map {
+/*.bing_map {
    position: absolute;
    top: 20;
    left: 10;
    width: 400px;
    height: 400px;
    border:#555555 2px solid;
-}
+}*/
 
 img { max-width: none; }
