--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,41 +1,49 @@
-<nav class="navbar navbar-default" role="navigation">
-  <!-- Brand and toggle get grouped for better mobile display -->
-  <div class="navbar-header">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-    <a class="navbar-brand" href="/">Pare-Up</a>
-  </div>
 
-  <!-- Collect the nav links, forms, and other content for toggling -->
-  <div class="collapse navbar-collapse navbar-ex1-collapse">
-<ul class="nav navbar-nav navbar-left">
-   <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Browse <b class="caret"></b></a>
-        <ul class="dropdown-menu">
-          <li><%= link_to "Browse by Food", products_path, 'data-no-turbolink' => true %></li>
-          <li><%= link_to "Browse by Location", location_path, 'data-no-turbolink' => true %></li>
+
+<div class="navbar-wrapper">
+  <div class="container">
+    <div class="navbar navbar-inverse navbar-static-top">
+
+      <div class="navbar-header">
+        <a class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </a>
+        <a class="navbar-brand" href="#">Pare Up</a>
+      </div>
+      <div class="navbar-collapse collapse">
+        <ul class="nav navbar-nav">
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Browse <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "Browse by Food", products_path, 'data-no-turbolink' => true %></li>
+              <li><%= link_to "Browse by Location", location_path, 'data-no-turbolink' => true %></li>
+            </ul>
+          </li>
+          <li><a href="http://www.bootply.com" target="ext">About</a></li>
+          <li><a href="#contact">Contact</a></li>
+
         </ul>
-      </li>
-</ul>
-    <ul class="nav navbar-nav navbar-right">
-      <% unless user_signed_in? %>
-      <li><a href="/users/sign_up">Create Account</a></li>
-      <% end %>
-      <li class="dropdown">
-        <% if user_signed_in? %>
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.email %> <b class="caret"></b></a>
-        <ul class="dropdown-menu">
-          <li><a href="/users/edit">Account Preferences</a></li>
-          <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+        <ul class="nav navbar-nav navbar-right">
+          <% unless user_signed_in? %>
+          <li><a href="/users/sign_up">Create Account</a></li>
+          <% end %>
+          <li class="dropdown">
+            <% if user_signed_in? %>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.email %> <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><a href="/users/edit">Account Preferences</a></li>
+              <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+            </ul>
+            <% else %>
+            <li><a href="/users/sign_in">Sign in</a></li>
+            <% end %>
+          </li>
         </ul>
-        <% else %>
-        <li><a href="/users/sign_in">Sign in</a></li>
-        <% end %>
-      </li>
-    </ul>
-  </div><!-- /.navbar-collapse -->
-</nav>
+
+      </div>
+
+    </div>
+  </div><!-- /container -->
+</div><!-- /navbar wrapper -->
