--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,20 +1,127 @@
+<!-- Carousel
+  ================================================== -->
+  <div id="myCarousel" class="carousel slide">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="item active">
+        <img src="/assets/cover.jpg">
+        <div class="container">
+          <div class="carousel-caption">
+            <h1>Find something good to eat</h1>
+            <p></p>
 
+            <div class="welcome-links-container">
+              <p>
+                <%= link_to "Buying? &raquo;".html_safe, search_path, {:class => "btn btn-lg btn-primary", :id => "new-product-link", remote: true} %>
 
-<div class="container">
+                <%= link_to "Selling? &raquo;".html_safe, new_product_path, {:class => "btn btn-lg btn-primary", :id => "new-product-link", remote: true} %>
+                <button class="browse-scroll btn btn-lg btn-primary">Start &raquo;</button>
+              </p>
+            </div>
 
-  <!-- Main component for a primary marketing message or call to action -->
-  <div class="jumbotron welcome-jumbotron">
-    <h1>Find something good to eat</h1>
-    <br>
-      <div class="welcome-links-container">
-    <p>
-      <%= link_to "Buying? &raquo;".html_safe, search_path, {:class => "btn btn-lg btn-primary", :id => "new-product-link", remote: true} %>
-
-      <%= link_to "Selling? &raquo;".html_safe, new_product_path, {:class => "btn btn-lg btn-primary", :id => "new-product-link", remote: true} %>
-    </p>
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <img src="/assets/second.jpg">
+        <div class="container">
+          <div class="carousel-caption">
+            <h1>Changes to the Grid</h1>
+            <p>Bootstrap 3 still features a 12-column grid, but many of the CSS class names have completely changed.</p>
+            <p><a class="btn btn-large btn-primary" href="#">Learn more</a></p>
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <img src="/assets/third.jpg">
+        <div class="container">
+          <div class="carousel-caption">
+            <h1>Percentage-based sizing</h1>
+            <p>With "mobile-first" there is now only one percentage-based grid.</p>
+            <p><a class="btn btn-large btn-primary" href="#">Browse gallery</a></p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Controls -->
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+      <span class="icon-prev"></span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+      <span class="icon-next"></span>
+    </a>
   </div>
-  </div>
-
-</div>
+  <!-- /.carousel -->
 
 
+<!-- Marketing messaging and featurettes
+  ================================================== -->
+  <!-- Wrap the rest of the page in another container to center all the content. -->
+
+  <div class="container marketing">
+
+    <!-- Three columns of text below the carousel -->
+    <div class="row">
+      <div class="col-md-4 text-center">
+        <img class="img-circle" src="http://placehold.it/140x140">
+        <h2>A Collective Problem</h2>
+        <p>From farm to fork, 40% of food is wasted in the United States. That’s $165 billion dollars worth of food a year, and roughly 20 pounds per person each month.</p>
+        <p><a class="btn btn-default" href="#">View details »</a></p>
+      </div>
+      <div class="col-md-4 text-center">
+        <img class="img-circle" src="http://placehold.it/140x140">
+        <h2>Easily Avoidable</h2>
+        <p>Grocery stores in America throw away $15 billion dollars worth of fresh fruits and vegetables that are cosmetically imperfect, but still entirely fit to eat, like oversized yams or oblong tomatoes.</p>
+        <p><a class="btn btn-default" href="#">View details »</a></p>
+      </div>
+      <div class="col-md-4 text-center">
+        <img class="img-circle" src="http://placehold.it/140x140">
+        <h2>At Every Level</h2>
+        <p>In New York City alone, 60% of its organic waste comes from restaurants, who throw out things like pastries, sandwiches, and more, that are too time inefficient to individually package and prepare for donation.</p>
+        <p><a class="btn btn-default" href="#">View details »</a></p>
+      </div>
+    </div><!-- /.row -->
+
+
+    <!-- START THE FEATURETTES -->
+
+    <hr class="featurette-divider">
+
+    <div class="featurette" id="first-feature">
+      <img class="featurette-image img-circle pull-right" src="http://placehold.it/512">
+      <h2 class="featurette-heading">Responsive Design. <span class="text-muted">It'll blow your mind.</span></h2>
+      <p class="lead">In simple terms, a responsive web design figures out what resolution of device it's being served on. Flexible grids then size correctly to fit the screen.</p>
+    </div>
+
+    <hr class="featurette-divider">
+
+    <div class="featurette">
+      <img class="featurette-image img-circle pull-left" src="http://placehold.it/512">
+      <h2 class="featurette-heading">Smaller Footprint. <span class="text-muted">Lightweight.</span></h2>
+      <p class="lead">The new Bootstrap 3 promises to be a smaller build. The separate Bootstrap base and responsive.css files have now been merged into one. There is no more fixed grid, only fluid.</p>
+    </div>
+
+    <hr class="featurette-divider">
+
+    <div class="featurette">
+      <img class="featurette-image img-circle pull-right" src="http://placehold.it/512">
+      <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Flatness.</span></h2>
+      <p class="lead">A big design trend for 2013 is "flat" design. Gone are the days of excessive gradients and shadows. Designers are producing cleaner flat designs, and Bootstrap 3 takes advantage of this minimalist trend.</p>
+    </div>
+
+    <hr class="featurette-divider">
+
+    <!-- /END THE FEATURETTES -->
+
+
+    <!-- FOOTER -->
+    <footer>
+      <p class="pull-right"><a href="#">Back to top</a></p>
+    </footer>
+
+  </div><!-- /.container -->
