--- a/app/views/welcome/search.js.erb
+++ b/app/views/welcome/search.js.erb
@@ -1,2 +1,2 @@
-$('.welcome-links-container').after('<%= j render("/welcome/search") %>');
+$('.welcome-links-container').append('<%= j render("/welcome/search") %>');
 $('#search').css({'font-size':'14px'});
