--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -21,8 +21,8 @@
               <li><%= link_to "Browse by Location", location_path, 'data-no-turbolink' => true %></li>
             </ul>
           </li>
-          <li><a href="http://www.bootply.com" target="ext">About</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <!-- <li><a href="http://www.bootply.com" target="ext">About</a></li> -->
+          <!-- <li><a href="#contact">Contact</a></li> -->
 
         </ul>
         <ul class="nav navbar-nav navbar-right">
