--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,11 +2,11 @@
   ================================================== -->
   <div id="myCarousel" class="carousel slide">
     <!-- Indicators -->
-    <ol class="carousel-indicators">
+   <!--  <ol class="carousel-indicators">
       <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
       <li data-target="#myCarousel" data-slide-to="1"></li>
       <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
+    </ol> -->
     <div class="carousel-inner">
       <div class="item active">
         <img src="/assets/cover.jpg">
@@ -14,20 +14,21 @@
           <div class="carousel-caption">
             <h1>Find something good to eat</h1>
             <p></p>
-
-            <div class="welcome-links-container">
+              <p>
+                 <div class="welcome-links-container">
               <p>
                 <%= link_to "Buying? &raquo;".html_safe, search_path, {:class => "btn btn-lg btn-primary", :id => "new-product-link", remote: true} %>
 
                 <%= link_to "Selling? &raquo;".html_safe, new_product_path, {:class => "btn btn-lg btn-primary", :id => "new-product-link", remote: true} %>
-                <button class="browse-scroll btn btn-lg btn-primary">Start &raquo;</button>
+
               </p>
             </div>
-
+                <!-- <button class="browse-scroll btn btn-lg btn-primary">Start &raquo;</button> -->
+              </p>
           </div>
         </div>
       </div>
-      <div class="item">
+     <!--  <div class="item">
         <img src="/assets/second.jpg">
         <div class="container">
           <div class="carousel-caption">
@@ -36,8 +37,8 @@
             <p><a class="btn btn-large btn-primary" href="#">Learn more</a></p>
           </div>
         </div>
-      </div>
-      <div class="item">
+      </div> -->
+<!--       <div class="item">
         <img src="/assets/third.jpg">
         <div class="container">
           <div class="carousel-caption">
@@ -46,15 +47,15 @@
             <p><a class="btn btn-large btn-primary" href="#">Browse gallery</a></p>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
     <!-- Controls -->
-    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+   <!--  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
       <span class="icon-prev"></span>
     </a>
     <a class="right carousel-control" href="#myCarousel" data-slide="next">
       <span class="icon-next"></span>
-    </a>
+    </a> -->
   </div>
   <!-- /.carousel -->
 
@@ -63,65 +64,72 @@
   ================================================== -->
   <!-- Wrap the rest of the page in another container to center all the content. -->
 
-  <div class="container marketing">
+  <div class="container">
 
     <!-- Three columns of text below the carousel -->
-    <div class="row">
+    <div class="row marketing">
       <div class="col-md-4 text-center">
         <img class="img-circle" src="http://placehold.it/140x140">
         <h2>A Collective Problem</h2>
         <p>From farm to fork, 40% of food is wasted in the United States. That’s $165 billion dollars worth of food a year, and roughly 20 pounds per person each month.</p>
-        <p><a class="btn btn-default" href="#">View details »</a></p>
+        <!-- <p><a class="btn btn-default" href="#">View details »</a></p> -->
       </div>
       <div class="col-md-4 text-center">
         <img class="img-circle" src="http://placehold.it/140x140">
         <h2>Easily Avoidable</h2>
         <p>Grocery stores in America throw away $15 billion dollars worth of fresh fruits and vegetables that are cosmetically imperfect, but still entirely fit to eat, like oversized yams or oblong tomatoes.</p>
-        <p><a class="btn btn-default" href="#">View details »</a></p>
+        <!-- <p><a class="btn btn-default" href="#">View details »</a></p> -->
       </div>
       <div class="col-md-4 text-center">
         <img class="img-circle" src="http://placehold.it/140x140">
         <h2>At Every Level</h2>
         <p>In New York City alone, 60% of its organic waste comes from restaurants, who throw out things like pastries, sandwiches, and more, that are too time inefficient to individually package and prepare for donation.</p>
-        <p><a class="btn btn-default" href="#">View details »</a></p>
+        <!-- <p><a class="btn btn-default" href="#">View details »</a></p> -->
       </div>
     </div><!-- /.row -->
 
 
     <!-- START THE FEATURETTES -->
 
-    <hr class="featurette-divider">
+    <!-- <hr class="featurette-divider marketing"> -->
 
-    <div class="featurette" id="first-feature">
-      <img class="featurette-image img-circle pull-right" src="http://placehold.it/512">
-      <h2 class="featurette-heading">Responsive Design. <span class="text-muted">It'll blow your mind.</span></h2>
-      <p class="lead">In simple terms, a responsive web design figures out what resolution of device it's being served on. Flexible grids then size correctly to fit the screen.</p>
+   <!--  <div class="featurette" id="first-feature">
+      <div class="welcome-links-container">
+              <p>
+                <%= link_to "Buying? &raquo;".html_safe, search_path, {:class => "btn btn-lg btn-primary", :id => "new-product-link", remote: true} %>
+
+                <%= link_to "Selling? &raquo;".html_safe, new_product_path, {:class => "btn btn-lg btn-primary", :id => "new-product-link", remote: true} %>
+
+              </p>
+            </div>
+      <%= gmaps4rails(@json) %>
+
+    </div> -->
+
+    <hr class="featurette-divider marketing">
+
+    <div class="featurette marketing">
+      <img class="featurette-image img-circle pull-left" src="http://static.talkingretail.com/wp-content/uploads/2013/06/organic-fresh-food-w.jpg" width="512px">
+      <h2 class="featurette-heading">PareUp makes it easy<span class="text-muted"><br>to meaningfully reduce food waste</span></h2>
+      <p class="lead">We are a social enterprise and platform for retailers to sell cosmetically imperfect or surplus food to customers at a discount. Applicable foods would be excess fresh produce, sealed packaged goods, and uneaten prepared foods (e.g. day-old pastries, refrigerated sandwiches), all of which are still quality, edible goods. </p>
     </div>
 
-    <hr class="featurette-divider">
+    <hr class="featurette-divider marketing">
 
-    <div class="featurette">
-      <img class="featurette-image img-circle pull-left" src="http://placehold.it/512">
-      <h2 class="featurette-heading">Smaller Footprint. <span class="text-muted">Lightweight.</span></h2>
-      <p class="lead">The new Bootstrap 3 promises to be a smaller build. The separate Bootstrap base and responsive.css files have now been merged into one. There is no more fixed grid, only fluid.</p>
-    </div>
-
-    <hr class="featurette-divider">
-
-    <div class="featurette">
+    <!-- <div class="featurette marketing">
       <img class="featurette-image img-circle pull-right" src="http://placehold.it/512">
       <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Flatness.</span></h2>
       <p class="lead">A big design trend for 2013 is "flat" design. Gone are the days of excessive gradients and shadows. Designers are producing cleaner flat designs, and Bootstrap 3 takes advantage of this minimalist trend.</p>
     </div>
 
-    <hr class="featurette-divider">
-
+    <hr class="featurette-divider marketing">
+ -->
     <!-- /END THE FEATURETTES -->
 
 
     <!-- FOOTER -->
     <footer>
-      <p class="pull-right"><a href="#">Back to top</a></p>
+      <p class="pull-right marketing"><a href="#">Back to top</a></p>
     </footer>
 
   </div><!-- /.container -->
