--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,5 @@
 
-
+<div class="navbarpareup">
 <div class="navbar-wrapper">
   <div class="container">
     <div class="navbar navbar-inverse navbar-static-top">
@@ -10,7 +10,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </a>
-        <a class="navbar-brand" href="#">Pare Up</a>
+        <a class="navbar-brand" href="/">Pare Up</a>
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
@@ -47,3 +47,4 @@
     </div>
   </div><!-- /container -->
 </div><!-- /navbar wrapper -->
+</div>
