--- a/app/views/products/new.js.erb
+++ b/app/views/products/new.js.erb
@@ -1,2 +1,3 @@
 $('.welcome-links-container').after('<%= j render("/products/form") %>');
-$('.welcome-form').css({'font-size':'12px'});
+$('.search-location-form').hide()
+$('.new_product').css({'font-size':'12px'});
