--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -17,10 +17,8 @@
               <p>
                  <div class="welcome-links-container">
               <p>
-                <%= link_to "Buying? &raquo;".html_safe, search_path, {:class => "btn btn-lg btn-primary", :id => "new-product-link", remote: true} %>
-
-                <%= link_to "Selling? &raquo;".html_safe, new_product_path, {:class => "btn btn-lg btn-primary", :id => "new-product-link", remote: true} %>
-
+                <%= link_to "Buying? &raquo;".html_safe, search_path, {:class => "btn btn-lg btn-primary", remote: true} %>
+                <%= link_to "Selling? &raquo;".html_safe, new_product_path, {:class => "btn btn-lg btn-primary", remote: true} %>
               </p>
             </div>
                 <!-- <button class="browse-scroll btn btn-lg btn-primary">Start &raquo;</button> -->
@@ -69,19 +67,19 @@
     <!-- Three columns of text below the carousel -->
     <div class="row marketing">
       <div class="col-md-4 text-center">
-        <img class="img-circle" src="http://placehold.it/140x140">
+        <img class="img-circle" src="http://s3.amazonaws.com/FoodApp/tomatoes.jpg">
         <h2>A Collective Problem</h2>
         <p>From farm to fork, 40% of food is wasted in the United States. That’s $165 billion dollars worth of food a year, and roughly 20 pounds per person each month.</p>
         <!-- <p><a class="btn btn-default" href="#">View details »</a></p> -->
       </div>
       <div class="col-md-4 text-center">
-        <img class="img-circle" src="http://placehold.it/140x140">
+        <img class="img-circle" src="http://s3.amazonaws.com/FoodApp/market.jpg">
         <h2>Easily Avoidable</h2>
         <p>Grocery stores in America throw away $15 billion dollars worth of fresh fruits and vegetables that are cosmetically imperfect, but still entirely fit to eat, like oversized yams or oblong tomatoes.</p>
         <!-- <p><a class="btn btn-default" href="#">View details »</a></p> -->
       </div>
       <div class="col-md-4 text-center">
-        <img class="img-circle" src="http://placehold.it/140x140">
+        <img class="img-circle" src="http://s3.amazonaws.com/FoodApp/nyc.jpg">
         <h2>At Every Level</h2>
         <p>In New York City alone, 60% of its organic waste comes from restaurants, who throw out things like pastries, sandwiches, and more, that are too time inefficient to individually package and prepare for donation.</p>
         <!-- <p><a class="btn btn-default" href="#">View details »</a></p> -->
@@ -109,21 +107,21 @@
     <hr class="featurette-divider marketing">
 
     <div class="featurette marketing">
-      <img class="featurette-image img-circle pull-left" src="http://static.talkingretail.com/wp-content/uploads/2013/06/organic-fresh-food-w.jpg" width="512px">
+      <img class="featurette-image img-circle pull-left" src="http://s3.amazonaws.com/FoodApp/organic.jpg">
       <h2 class="featurette-heading">PareUp makes it easy<span class="text-muted"><br>to meaningfully reduce food waste</span></h2>
       <p class="lead">We are a social enterprise and platform for retailers to sell cosmetically imperfect or surplus food to customers at a discount. Applicable foods would be excess fresh produce, sealed packaged goods, and uneaten prepared foods (e.g. day-old pastries, refrigerated sandwiches), all of which are still quality, edible goods. </p>
     </div>
 
     <hr class="featurette-divider marketing">
 
-    <!-- <div class="featurette marketing">
-      <img class="featurette-image img-circle pull-right" src="http://placehold.it/512">
-      <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Flatness.</span></h2>
-      <p class="lead">A big design trend for 2013 is "flat" design. Gone are the days of excessive gradients and shadows. Designers are producing cleaner flat designs, and Bootstrap 3 takes advantage of this minimalist trend.</p>
+    <div class="featurette marketing">
+      <img class="featurette-image img-circle pull-right" src="http://s3.amazonaws.com/FoodApp/fruit.jpg">
+      <h2 class="featurette-heading">So...<span class="text-muted"><br>how does it work?</span></h2>
+      <p class="lead">Sellers list food items, the quantity available, price, and sell-by date. Buyers maintain a wishlist of items and receive notifications when items on their lists become available neraby. Buyers can also search by item and location.  After the buyer has had a chance to inspect the items in person, the two parties confirm the transactions via our mobile app.  </p>
     </div>
 
     <hr class="featurette-divider marketing">
- -->
+
     <!-- /END THE FEATURETTES -->
 
 
