--- a/app/views/welcome/search.js.erb
+++ b/app/views/welcome/search.js.erb
@@ -1,2 +1,3 @@
 $('.welcome-links-container').append('<%= j render("/welcome/search") %>');
+$('.new_product').hide()
 $('#search').css({'font-size':'14px'});
