--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,15 +10,15 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </a>
-        <a class="navbar-brand" href="/">Pare Up</a>
+        <a class="navbar-brand" href="/">PareUp</a>
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Browse <b class="caret"></b></a>
             <ul class="dropdown-menu">
-              <li><%= link_to "Browse by Food", products_path, 'data-no-turbolink' => true %></li>
-              <li><%= link_to "Browse by Location", location_path, 'data-no-turbolink' => true %></li>
+              <li><%= link_to "Browse by Food", products_path, 'data-no-turbolink' => true, :class => "browse-food-link" %></li>
+              <li><%= link_to "Browse by Location", location_path, 'data-no-turbolink' => true, :class => "browse-location-link" %></li>
             </ul>
           </li>
           <!-- <li><a href="http://www.bootply.com" target="ext">About</a></li> -->
