--- a/app/views/welcome/_search.html.erb
+++ b/app/views/welcome/_search.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag products_path, :method => :get do %>
+<%= form_tag({:controller => "products", :action => "index"}, :method => "get", :class => "search-location-form") do %>
   <p>
     <%= text_field_tag :search, params[:search], placeholder: "Search by location" %>
     <%= submit_tag "Search", :name => nil, :class => "btn btn-primary" %>
