--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,7 +1,7 @@
 body {
   /*background: url(http://s3.amazonaws.com/FoodApp/cover.jpg) no-repeat center center fixed;*/
   /*background-size: cover;*/
-  padding: 90px;
+  padding-top: 90px;
 }
 
 .navbar-inverse .navbar-brand {
