--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -69,19 +69,19 @@
       <div class="col-md-4 text-center">
         <img class="img-circle" src="http://s3.amazonaws.com/FoodApp/tomatoes.jpg">
         <h2>A Collective Problem</h2>
-        <p>From farm to fork, 40% of food is wasted in the United States. That’s $165 billion dollars worth of food a year, and roughly 20 pounds per person each month.</p>
+        <p>From farm to fork, 40% of food is wasted in the United States. That’s $165 billion worth of food a year, and roughly 20 pounds per person each month.</p>
         <!-- <p><a class="btn btn-default" href="#">View details »</a></p> -->
       </div>
       <div class="col-md-4 text-center">
         <img class="img-circle" src="http://s3.amazonaws.com/FoodApp/market.jpg">
         <h2>Easily Avoidable</h2>
-        <p>Grocery stores in America throw away $15 billion dollars worth of fresh fruits and vegetables that are cosmetically imperfect, but still entirely fit to eat, like oversized yams or oblong tomatoes.</p>
+        <p>Grocery stores in America throw away $15 billion worth of fresh fruits and vegetables each year.  Generally, these foods are cosmetically imperfect but still entirely fit to eat, like over-sized yams or oblong tomatoes.</p>
         <!-- <p><a class="btn btn-default" href="#">View details »</a></p> -->
       </div>
       <div class="col-md-4 text-center">
         <img class="img-circle" src="http://s3.amazonaws.com/FoodApp/nyc.jpg">
         <h2>At Every Level</h2>
-        <p>In New York City alone, 60% of its organic waste comes from restaurants, who throw out things like pastries, sandwiches, and more, that are too time inefficient to individually package and prepare for donation.</p>
+        <p>In New York City alone, 60% of all organic waste comes from restaurants, many of which throw out day-old pastries and sandwiches that are too cumbersome to individually package and prepare for donation.</p>
         <!-- <p><a class="btn btn-default" href="#">View details »</a></p> -->
       </div>
     </div><!-- /.row -->
@@ -109,15 +109,23 @@
     <div class="featurette marketing">
       <img class="featurette-image img-circle pull-left" src="http://s3.amazonaws.com/FoodApp/organic.jpg">
       <h2 class="featurette-heading">PareUp makes it easy<span class="text-muted"><br>to meaningfully reduce food waste</span></h2>
-      <p class="lead">We are a social enterprise and platform for retailers to sell cosmetically imperfect or surplus food to customers at a discount. Applicable foods would be excess fresh produce, sealed packaged goods, and uneaten prepared foods (e.g. day-old pastries, refrigerated sandwiches), all of which are still quality, edible goods. </p>
+      <p class="lead">We are a social enterprise and platform for grocers, food retailers, and restaurants to sell cosmetically imperfect / surplus food to customers. </p>
     </div>
 
     <hr class="featurette-divider marketing">
 
     <div class="featurette marketing">
       <img class="featurette-image img-circle pull-right" src="http://s3.amazonaws.com/FoodApp/fruit.jpg">
-      <h2 class="featurette-heading">So...<span class="text-muted"><br>how does it work?</span></h2>
-      <p class="lead">Sellers list food items, the quantity available, price, and sell-by date. Buyers maintain a wishlist of items and receive notifications when items on their lists become available neraby. Buyers can also search by item and location.  After the buyer has had a chance to inspect the items in person, the two parties confirm the transactions via our mobile app.  </p>
+      <h2 class="featurette-heading">So,<span class="text-muted"><br>how does it work?</span></h2>
+      <p class="lead">Sellers list food items, the quantity available, price, and sell-by date. Buyers maintain a wishlist of items to receive notifications of food availability, or they can search specifically by item or location.  After the buyer has had a chance to inspect their items in-person, the two parties confirm the transaction via our mobile app.  </p>
+    </div>
+
+    <hr class="featurette-divider marketing">
+
+      <div class="featurette marketing">
+      <img class="featurette-image img-circle pull-left" src="http://s3.amazonaws.com/FoodApp/tomatoes2.jpg">
+      <h2 class="featurette-heading">What can we buy?<span class="text-muted"><br></span></h2>
+      <p class="lead">Applicable food items are excess fresh produce, sealed packaged goods, and uneaten prepared foods (e.g. day-old pastries, refrigerated sandwiches), all of which are still delicious, safe, and edible goods.</p>
     </div>
 
     <hr class="featurette-divider marketing">
