--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -12,8 +12,8 @@
 
   <div><%= f.label :password_confirmation %><br />
   <%= f.password_field :password_confirmation %></div>
-
-  <div><%= f.submit "Sign up" %></div>
+<br>
+  <div><%= f.submit "Sign up", :class => "btn btn-primary" %></div>
 <% end %>
 
 <%= render "devise/shared/links" %>
