changed third featurette image

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -123,7 +123,7 @@
     <hr class="featurette-divider marketing">
 
       <div class="featurette marketing">
-      <img class="featurette-image img-circle pull-left" src="http://s3.amazonaws.com/FoodApp/tomatoes2.jpg">
+      <img class="featurette-image img-circle pull-left" src="http://s3.amazonaws.com/FoodApp/market.jpg">
       <h2 class="featurette-heading">What can we buy?<span class="text-muted"><br></span></h2>
       <p class="lead">Applicable food items are excess fresh produce, sealed packaged goods, and uneaten prepared foods (e.g. day-old pastries, refrigerated sandwiches), all of which are still delicious, safe, and edible goods.</p>
     </div>
