fixed some images

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -73,7 +73,7 @@
         <!-- <p><a class="btn btn-default" href="#">View details »</a></p> -->
       </div>
       <div class="col-md-4 text-center">
-        <img class="img-circle" src="http://s3.amazonaws.com/FoodApp/market.jpg">
+        <img class="img-circle" src="http://s3.amazonaws.com/FoodApp/tomatoes2.jpg">
         <h2>Easily Avoidable</h2>
         <p>Grocery stores in America throw away $15 billion worth of fresh fruits and vegetables each year.  Generally, these foods are cosmetically imperfect but still entirely fit to eat, like over-sized yams or oblong tomatoes.</p>
         <!-- <p><a class="btn btn-default" href="#">View details »</a></p> -->
