changed some navbar text, linked products to user profile

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -17,8 +17,8 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Browse <b class="caret"></b></a>
             <ul class="dropdown-menu">
-              <li><%= link_to "Browse by Food", products_path, 'data-no-turbolink' => true, :class => "browse-food-link" %></li>
-              <li><%= link_to "Browse by Location", location_path, 'data-no-turbolink' => true, :class => "browse-location-link" %></li>
+              <li><%= link_to "Browse all Items", products_path, 'data-no-turbolink' => true, :class => "browse-food-link" %></li>
+              <li><%= link_to "Browse Items by Location", location_path, 'data-no-turbolink' => true, :class => "browse-location-link" %></li>
             </ul>
           </li>
           <!-- <li><a href="http://www.bootply.com" target="ext">About</a></li> -->
