--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class="col-md-1"></div>
 
 <div class="well product-show-main col-md-6">
-  <h1>User Listings</h1>
+  <h1><%= @user.email %>'s Listings</h1>
   <hr class="user-hr">
   <% @products.each do |product| %>
   <%= image_tag product.image.url(:thumb) %>
@@ -13,7 +13,8 @@
 <div class="col-md-1"></div>
 <div class="col-md-3">
   <div class="well">
-    <p>USER PHOTO GOES HERE </p>
+    <p><img src="http://www.gravatar.com/avatar/<%= @url_hash %>"/> </p>
+    <p><%= @user.email %></p>
     </div>
     <div class="well">
       <%= gmaps(:markers => { :data => @json }, :map_options => { :auto_adjust => true, :auto_zoom => true, :zoom => 16 }) %>
