added spacing on user profile page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
   <h2><%= product.name %></h2>
   <h3><%= product.location %>&nbsp $<%= product.price %></h3>
   <p><%= product.description %></p>
-  <p><a class="btn btn-primary" href='/products/<%= product.id %>'>View Detail</a>
+  <p><a class="btn btn-primary" href='/products/<%= product.id %>'>View Detail</a><br>
   <% end %>
 </div>
 <div class="col-md-1"></div>
