--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,7 +9,7 @@
     </ol> -->
     <div class="carousel-inner">
       <div class="item active">
-        <img src="http://s3.amazonaws.com/FoodApp/cover.jpg">
+        <img src="http://s3.amazonaws.com/FoodApp/veggies2.jpg">
         <div class="container">
           <div class="carousel-caption">
             <h1>Find something good to eat</h1>
